tests/integration/snapshots/integration__snapshots__json_vulnerable.snap
---
source: tests/integration/snapshots.rs
expression: json
---
[
  {
    "byte_length": 18,
    "byte_offset": 28,
    "category": "security",
<FIXTURE>/vulnerable.vue",
    "ignored": false,
    "message": "Unsafe `v-html` directive renders untrusted HTML",
    "rule_id": "vue/security/no-v-html",
    "rule_name": "no-v-html",
    "severity": "critical"
  },
  {
    "byte_length": 15,
    "byte_offset": 70,
    "category": "security",
<FIXTURE>/vulnerable.vue",
    "ignored": false,
    "message": "Dynamic `src` binding can load untrusted resources",
    "rule_id": "vue/security/no-dynamic-bind-src",
    "rule_name": "no-dynamic-bind-src",
    "severity": "high"
  },
  {
    "byte_length": 36,
    "byte_offset": 96,
    "category": "bestpractice",
<FIXTURE>/vulnerable.vue",
    "ignored": false,
    "message": "Inline styles can hurt performance and maintainability",
    "rule_id": "vue/best-practice/no-inline-style",
    "rule_name": "no-inline-style",
    "severity": "low"
  },
  {
    "byte_length": 21,
    "byte_offset": 65,
    "category": "accessibility",
<FIXTURE>/vulnerable.vue",
    "ignored": false,
    "message": "`<img>` without an `alt` attribute",
    "rule_id": "vue/accessibility/no-img-without-alt",
    "rule_name": "no-img-without-alt",
    "severity": "medium"
  }
]
