tests/integration/snapshots/integration__snapshots__json_with_ignores.snap
---
source: tests/integration/snapshots.rs
expression: json
---
[
  {
    "byte_length": 12,
    "byte_offset": 18,
    "category": "security",
<FIXTURE>/with_ignores.vue",
    "ignored": false,
    "message": "Unsafe `v-html` directive renders untrusted HTML",
    "rule_id": "vue/security/no-v-html",
    "rule_name": "no-v-html",
    "severity": "critical"
  },
  {
    "byte_length": 16,
    "byte_offset": 98,
    "category": "security",
<FIXTURE>/with_ignores.vue",
    "ignored": true,
    "message": "Unsafe `v-html` directive renders untrusted HTML",
    "rule_id": "vue/security/no-v-html",
    "rule_name": "no-v-html",
    "severity": "critical"
  },
  {
    "byte_length": 18,
    "byte_offset": 282,
    "category": "security",
<FIXTURE>/with_ignores.vue",
    "ignored": false,
    "message": "`.innerHTML` assignment introduces a DOM XSS sink",
    "rule_id": "vue/security/no-inner-html",
    "rule_name": "no-inner-html",
    "severity": "critical"
  },
  {
    "byte_length": 22,
    "byte_offset": 333,
    "category": "security",
<FIXTURE>/with_ignores.vue",
    "ignored": true,
    "message": "`.innerHTML` assignment introduces a DOM XSS sink",
    "rule_id": "vue/security/no-inner-html",
    "rule_name": "no-inner-html",
    "severity": "critical"
  }
]
